# telegram-copilot-bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: mcp.json.example  test-prompts.prompt.md
scripts/: restart-hub.ps1  restart-hub.sh  test_session_discovery.py
src/mcp_telegram_notify/: __init__.py  __main__.py  config.py  server.py  telegram.py
src/telegram_copilot_bridge/: __init__.py  __main__.py  bot_commander.py  config.py  copilot_bridge.py  hub.py  server.py  session_manager.py  telegram.py
tests/: test_bot_commander.py  test_config.py  test_copilot_bridge.py  test_server.py  test_session_manager.py  test_telegram.py
